chore: add physical machine crd
